Fixed title and background on small devices.

--- a/css/master.css
+++ b/css/master.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media only screen and (max-device-width: 699px) {
+  body {
+    background: url('../resources/images/body_background_small.jpg') no-repeat center center fixed;
+  }
+}
+
 html, body {
   height: 100%;
   margin: 0;
